# coq-program-verification-template

./: .gitignore  LICENSE  Makefile.coq.local  README.md  _CoqProject  coq-program-verification-template.opam  dune-project
.github/workflows/: coq-ci.yml  docker-action.yml
src/: binary_search.c
theories/: binary_search.v  binary_search_theory.v  binary_search_verif.v  dune
