(coq.theory
 (name ProgramVerificationTemplate)
 (package coq-program-verification-template)
 (synopsis "Coq program verification project template")
 (theories compcert VST Flocq Ltac2))

(rule
 (target binary_search.v)
 (deps ../src/binary_search.c)
 (action (run clightgen -o %{target} -normalize %{deps}))
 (mode fallback))
